Bug 74087 - Cell gets activated on cell with mis-spelled word regardless of mouse cursor position.
Summary: Cell gets activated on cell with mis-spelled word regardless of mouse cursor ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.3 rc
Hardware: Other Linux (All)
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.4
Keywords: regression
: 74891 75849 75850 79566 84360 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-26 16:32 UTC by Tavo
Modified: 2022-02-19 15:10 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tavo 2014-01-26 16:32:17 UTC
Problem description: when i have a text in a cell i try to formatting but when this cell have text with orthographic problems the edit process is activated.

Steps to reproduce:
1. ....
write two cells: one with correct text (by example: "hola mundo" without quotes of course) and other cell with orthographic problem by example:  "dias" without accent)
2. ....
with mouse o touchpad try to open contextual menu over first cell (with correct text) and after over second cell (with incorrect text).


Current behavior:
- First case open contextual menu like usual
- Second case open cell in editing mode

Expected behavior:
- First case the same
- Second case expected behavior must be like first case
              
Operating System: Debian
Version: 4.2.0.3 rc
Last worked in: 4.1.4.2 release
Comment 1 Joel Madero 2014-02-26 02:33:11 UTC
Okay this is quite nasty and indeed a regression.

Ubuntu 13.10
LibreOffice 4.1.5.3 works
LibreOffice Dev 4.3 built today - does not work


Reproducible Steps:
In A1 write some word that does not exist but close to another word (testss)
Right click in cell

Observed: You enter into editing the cell, without giving you options to (a) look at the words that you might actually mean, (b) the contextual menu which allows you to edit properties of the cell

Marking as:
Major -- I think particularly because spell check is substantially hindered by this + regression
High - default seems appropriate



Adding to 4.2 mab


Thanks for reporting!
Comment 2 V Stuart Foote 2014-02-26 03:07:54 UTC Comment hidden (obsolete)
Comment 3 V Stuart Foote 2014-02-26 03:23:07 UTC
(In reply to comment #2)
Actually I should have read issue closer. It is NOT an issue in Writer, but IS an issue in Calc.

Non-formula/non-numeric text entered into a cell that fails spelling/grammar check is highlighted.

And, I do not get <Right> mouse context menu options to correct spelling, as with a table cell in Writer.

However by positioning cursor, or using mouse pointer, onto cell with the incorrect text does have the active focus for F7 (Spell check) or <Ctrl>+F7 (Thesaurus).

So, in the calc refactoring done for 4.2.x, is that actually supposed to be the corretive action now--i.e. the <Right> mouse context is ONLY tasked with cell formatting? Spelling is not driven from the context menu?
Comment 4 Kohei Yoshida 2014-02-26 12:30:26 UTC
(In reply to comment #1)
> Okay this is quite nasty and indeed a regression.
> 
> Ubuntu 13.10
> LibreOffice 4.1.5.3 works
> LibreOffice Dev 4.3 built today - does not work

You skipped 4.2 Joel. Spell checking is totally broken on master for different reasons.  Can you check the 4.2 branch as well?
Comment 5 Kohei Yoshida 2014-02-26 13:42:24 UTC
I'll take this off 4.2 MAB for the time being.  It works fine there.
Comment 6 Kohei Yoshida 2014-02-26 14:48:12 UTC
(In reply to comment #5)
> It works fine there.

Except that it doesn't account of the position of the mis-spelled word that is. On master, you don't even get spell suggestion list.
Comment 7 Joel Madero 2014-03-06 21:39:07 UTC
Confirmed on 4.2.1.1. Placing it back on MAB as it's pretty annoying - cannot access context menu with 4.2.1.1 if there is a misspelled word.
Comment 8 Jorendc 2014-03-06 21:43:35 UTC
*** Bug 75850 has been marked as a duplicate of this bug. ***
Comment 9 Jorendc 2014-03-06 21:44:45 UTC
*** Bug 75849 has been marked as a duplicate of this bug. ***
Comment 10 Kohei Yoshida 2014-03-07 21:17:33 UTC
*** Bug 74891 has been marked as a duplicate of this bug. ***
Comment 11 flippersms-bugs 2014-03-08 00:25:05 UTC
This bug still exists on Windows x64, 4.2.2.
Comment 12 Andras Timar 2014-03-29 12:58:01 UTC
On master, 91923443e0d04218ae7124f439fc06a76f904462 is the first "bad" commit -- I mean it must have fixed something, the commit message was "Fix context menu launch on mis-spelled word in a cell.". But since then, the right click on a cell that contains misspelled word always bring up the suggestion popup, even when user does not right click on the misspelled word.
Comment 13 Commit Notification 2014-04-12 03:09:56 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd22c3442389f69fc1cc14dd07b17f5a59498e5e

fdo#74087: Inspect if a mis-spelled word is at cursor position...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Kohei Yoshida 2014-04-12 03:13:15 UTC
4.2 backport: https://gerrit.libreoffice.org/8943
Comment 15 Eike Rathke (retired, only occasionally showing up) 2014-04-15 11:28:51 UTC
Seems that didn't result in a commit notification, http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-4-2&id=f2aa4f23a75b48bb8e0d0c3fefa4de5634677e75
Comment 16 tommy27 2014-04-17 11:47:55 UTC
@Andras and Kohei

would you please take a look at Bug 77508 ?

I wonder if the spellcheck issues you found in the 4.2.x branch may cause this weird autocorrect bug regarding typing number "11" and "8" I've just found.
Comment 17 Kohei Yoshida 2014-04-17 13:05:03 UTC
(In reply to comment #16)
> @Andras and Kohei
> 
> would you please take a look at Bug 77508 ?
> 
> I wonder if the spellcheck issues you found in the 4.2.x branch may cause
> this weird autocorrect bug regarding typing number "11" and "8" I've just
> found.

That's unrelated to this bug.
Comment 18 m_a_riosv 2014-06-03 00:47:38 UTC
*** Bug 79566 has been marked as a duplicate of this bug. ***
Comment 19 Matthew Francis 2014-09-28 04:05:21 UTC
*** Bug 84360 has been marked as a duplicate of this bug. ***