fdo#74087: Inspect if a mis-spelled word is at cursor position...

then decide whether to launch a spell candidate menu or a regular context
menu.

Change-Id: Ib121e9c6729e068c70ff216391f863639aa01951